# The_Document_Intelligence_Refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  pyproject.toml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  wails.json
frontend/src/: App.tsx
frontend/src/components/: DashboardLayout.tsx
frontend/src/pages/: HomePage.tsx  QueryPage.tsx  ResultsPage.tsx  SettingsPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
rubric/: extraction_rules.yaml
rust_ext/: Cargo.toml
rust_ext/src/: lib.rs
src/agents/: __init__.py  chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/api/: __init__.py  mcp_server.py  server.py
src/models/: __init__.py  bbox.py  document_profile.py  elements.py  extracted_document.py  ldu.py  page_index.py  provenance.py
src/strategies/: __init__.py  fast_text.py  layout_aware.py  vision.py
src/utils/: __init__.py  config.py  data_layer.py  keyword_extraction.py  language_detection.py  ledger.py  ollama_client.py  plugin_system.py  rust_bindings.py  stopwords.py  system_check.py  text_quality.py  token_reduction.py
src/utils/plugins/: __init__.py  ocr_backend.py  post_processor.py  validator.py
tests/: test_data_layer.py  test_keyword_extraction.py  test_language_detection.py  test_plugins.py  test_rust_bindings.py  test_stopwords.py  test_text_quality.py  test_token_reduction.py  test_triage.py
