[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery - A tiered extraction pipeline for intelligent document processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "10 Academy", email = "team@10academy.org"}
]
keywords = ["document", "extraction", "pdf", "ocr", "ai", "refinery", "triage", "vlm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies
dependencies = [
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # PDF processing
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # Logging
    "loguru>=0.7.0",
    
    # Async
    "aiofiles>=23.0.0",
    
    # Agent framework
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    
    # REST API
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Local VLM (Ollama/LM Studio)
    "httpx>=0.26.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
extraction-strategies = []
layout-aware = []
vision = ["openai>=1.0.0"]
vector-store = ["chromadb>=0.4.0", "faiss-cpu>=1.7.0"]
test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0", "pytest-mock>=3.12.0", "httpx>=0.25.0"]
dev = ["black>=23.0.0", "isort>=5.12.0", "ruff>=0.1.0", "mypy>=1.7.0", "pre-commit>=3.5.0"]
all = ["openai>=1.0.0", "chromadb>=0.4.0", "faiss-cpu>=1.7.0", "pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0", "pytest-mock>=3.12.0", "httpx>=0.25.0", "black>=23.0.0", "isort>=5.12.0", "ruff>=0.1.0", "mypy>=1.7.0", "pre-commit>=3.5.0"]

[project.urls]
Homepage = "https://github.com/10academy/document-intelligence-refinery"
Documentation = "https://document-intelligence-refinery.readthedocs.io"
Repository = "https://github.com/10academy/document-intelligence-refinery"
Issues = "https://github.com/10academy/document-intelligence-refinery/issues"

[project.scripts]
refinery = "src.cli:main"
triage = "src.agents.triage:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "pymupdf.*",
    "pydantic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
