[package]
name = "document_intelligence_refinery"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for Document Intelligence Refinery"

[lib]
name = "document_intelligence_refinery"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = "0.8"
rayon = "1.8"
unicode-segmentation = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
